--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <img src="./Super_Saiyan_2_Teen_Gohan_by_BrusselTheSaiyan_on_DeviantArt-removebg-preview.pnggit">
+        <img src="./Super_Saiyan_2_Teen_Gohan_by_BrusselTheSaiyan_on_DeviantArt-removebg-preview.png">
     </div>
  
 </body>
